[package]
name = "sample"
version = "0.1.0"
authors = ["Gabriel Simmer <gabriel@gitgalaxy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.11.1"
reqwest = "0.12.12"
serde = "1.0.217"
sqlx = "0.8.3"
tokio = "1.43.0"
